2.32/_sources/reference/config_files/global_conf.rst.txt
.. _reference_config_files_global_conf:

global.conf
===========

The **global.conf** file is located in the Conan user home directory, e.g., *[CONAN_HOME]/global.conf*. If it does not
already exist, a default one is automatically created.

Introduction to configuration
-----------------------------

*global.conf* is aimed to save some core/tools/user configuration variables that will be used by Conan. For instance:

* Package ID modes.
* General HTTP(python-requests) configuration.
* Number of retries when downloading/uploading recipes.
* Related tools configurations (used by toolchains, helpers, etc.)
* :ref:`Policies<reference_policies>`, which are a set of rules to enforce certain behaviors from Conan.
* Others (required Conan version, CLI non-interactive, etc.)

Let's briefly explain the three types of existing configurations:

* ``core.*``: aimed to configure values of Conan core behavior (download retries, package ID modes, etc.).
  Only definable in *global.conf* file.
* ``tools.*``: aimed to configure values of Conan tools (toolchains, build helpers, etc.) used in your recipes.
  Definable in both *global.conf* and :ref:`profiles <reference_config_files_profiles>`.
* ``user.*``: aimed to define personal user configurations. They can define whatever user wants.
  Definable in both *global.conf* and :ref:`profiles <reference_config_files_profiles>`.

To list all the possible configurations available, run :command:`conan config list`:


.. autocommand::
    :command: conan config list


User/Tools configurations
-------------------------

Tools and user configurations can be defined in both the *global.conf* file and
:ref:`Conan profiles <reference_config_files_profiles_conf>`. They look like:


.. code-block:: text
    :caption: *global.conf*

    tools.build:verbosity=verbose
    tools.microsoft.msbuild:max_cpu_count=2
    tools.microsoft.msbuild:vs_version = 16
    tools.build:jobs=10
    # User conf variable
    user.confvar:something=False

.. important::

    Profiles values will have priority over globally defined ones in global.conf.


These are some hints about configuration items scope and naming:

- ``core.xxx`` and ``tools.yyy`` are Conan built-ins, users cannot define their own ones in these scopes.
- ``core.xxx`` can be defined in ``global.conf`` or via the ``--core-conf`` CLI argument only, but not in profiles.
- ``tools.yyy`` can be defined in ``global.conf``, in profiles ``[conf]`` section and as CLI ``-c`` arguments
- ``user.zzz`` can be defined everywhere, and they are totally at the user discretion, no established naming convention. However this would be more or less expected:
   - For open source libraries, specially those in conancenter, ``user.packagename:conf`` might be expected, like the ``boost`` recipe defining ``user.boost:conf`` conf
   - For private usage, the recommendation could be to use something like ``user.orgname:conf`` for global org configuration across all projects, ``user.orgname.project:conf`` for project or package configuration, though ``user.project:conf`` might be also good if the project name is unique enough.
   - They _must_ have one ``:`` separator, like ``user.myorg:conf``, but not ``user.myorg.conf`` or ``user.myorg``. This is to disambiguate from patterns, which are discussed below.

Configuration file template
---------------------------


It is possible to use **jinja2** template engine for *global.conf*. When Conan loads this file, it immediately parses
and renders the template, which must result in a standard tools-configuration text.

  .. code:: jinja

     # Using all the cores automatically
     tools.build:jobs={{os.cpu_count()}}
     # Using the current OS
     user.myconf.system:name = {{platform.system()}}

Conan also injects ``detect_api`` (non-stable, read the reference) to the jinja rendering context. You can use it like this:

  .. code:: jinja

    user.myteam:myconf1={{detect_api.detect_os()}}
    user.myteam:myconf2={{detect_api.detect_arch()}}

For more information on how to use it, please check :ref:`the detect_api section
<reference_config_files_profiles_detect_api>` in the profiles reference.

The Python packages passed to render the template are ``os``, ``platform`` and ``hashlib`` for all platforms and ``distro`` in Linux platforms.
Additionally, the variables ``conan_version`` and ``conan_home_folder`` are also available.

The ``os``, ``platform`` and ``distro`` can be useful to perform different system checks, while the ``hashlib`` library can be convenient
to compute unique hashes based on the ``conan_home_folder`` to define unique strings, for example for unique shorter paths in Windows in
CI systems when sometimes the path length can be an issue, for example:

.. code-block:: python

  # compute a unique hash based on the current home folder
  {% set h = hashlib.new("sha256", conan_home_folder.encode(),
                         usedforsecurity=False).hexdigest() %}
  # and use the first 6 characters to compose a short path for package storage
  core.cache:storage_path=C:/conan_{{h[:6]}}


Configuration data types
------------------------


All the values will be interpreted by Conan as the result of the python built-in `eval()` function:

.. code-block:: text

    # String
    tools.build:verbosity=verbose
    # Boolean
    tools.system.package_manager:sudo=True
    # Integer
    tools.microsoft.msbuild:max_cpu_count=2
    # List of values
    user.myconf.build:ldflags=["--flag1", "--flag2"]
    # Dictionary
    tools.microsoft.msbuildtoolchain:compile_options={"ExceptionHandling": "Async"}


.. warning::

    Because the value is passed through ``eval()``, an input that looks like a numeric
    literal will be evaluated as such. For example, a version string like ``1.10`` will
    be evaluated to the float ``1.1``, silently losing the trailing zero:

    .. code-block:: text

        # This becomes the float 1.1, NOT the string "1.10"
        user.myorg:docker_image_tag=1.10

    Note that this mostly affects ``user.*`` confs, since built-in ``core.*`` and
    ``tools.*`` confs internally declare their type and would not convert
    a float. For ``user.*`` confs no type is enforced by default, so the evaluated
    value is passed through as-is.

    The recommended workaround is to prefix the value with a non-numeric character
    (for example ``v``) so ``eval()`` cannot turn it into a number, and then strip
    that character in the recipe:

    .. code-block:: text

        # In the profile / global.conf / -c CLI argument
        user.myorg:docker_image_tag=v1.10

    .. code-block:: python

        # In the recipe
        tag = self.conf.get("user.myorg:docker_image_tag", check_type=str).lstrip("v")

    Wrapping the value in quotes (``"1.10"``) also works from a *global.conf* or profile
    ``[conf]`` section (``eval()`` will return the string ``1.10``), but this typically
    does not survive shell quoting when passed on the command line with ``-c``.


.. _configuration_data_operators:

Configuration data operators
----------------------------

It's also possible to use some extra operators when you're composing tool configurations in your *global.conf* or
any of your profiles:

* ``+=`` == ``append``: appends values at the end of the existing value (only for lists).
* ``=+`` == ``prepend``: puts values at the beginning of the existing value (only for lists).
* ``*=`` == ``update``: updates the specified keys only, leaving the rest unmodified (only for dictionaries)
* ``=!`` == ``unset``: gets rid of any configuration value. The ``=~`` operator is an alias for ``=!``.

.. code-block:: text
    :caption: *global.conf*

    # Define the value => ["-f1"]
    user.myconf.build:flags=["-f1"]

    # Append the value ["-f2"] => ["-f1", "-f2"]
    user.myconf.build:flags+=["-f2"]

    # Prepend the value ["-f0"] => ["-f0", "-f1", "-f2"]
    user.myconf.build:flags=+["-f0"]

    # Unset the value (both notations are equivalent)
    user.myconf.build:flags=!
    user.myconf.build:flags=~

    # Define the value => {"a": 1, "b": 2}
    user.myconf.build:other={"a": 1, "b": 2}

    # Update b = 4 => {"a": 1, "b": 4}
    user.myconf.build:other*={"b": 4}

.. _reference_config_files_global_conf_patterns:

Configuration patterns
----------------------

You can use package patterns to apply the configuration in those dependencies which are matching:

.. code-block:: text

    *:tools.cmake.cmaketoolchain:generator=Ninja
    zlib/*:tools.cmake.cmaketoolchain:generator=Visual Studio 16 2019

This example shows you how to specify a general ``generator`` for all your packages except for ``zlib`` which is defining
``Visual Studio 16 2019`` as its generator.

Besides that, it's quite relevant to say that **the order matters**. So, if we change the order of the
configuration lines above:

.. code-block:: text

    zlib/*:tools.cmake.cmaketoolchain:generator=Visual Studio 16 2019
    *:tools.cmake.cmaketoolchain:generator=Ninja

The result is that you're specifying a general ``generator`` for all your packages, and that's it. The ``zlib`` line has no
effect because it's the first one evaluated, and after that, Conan is overriding that specific pattern with the most
general one, so it deserves to pay special attention to the order.

global_user.conf
================

.. include:: ../../common/experimental_warning.inc


Similar to how the ``settings_user.yml`` can complete the default ``settings.yml``, the (new in Conan 2.29) ``global_user.conf``
allow developers to have their own ``[CONAN_HOME]/global_user.conf`` file in the Conan cache, with the following properties:

- It also allows ``jinja2`` templating syntax, with the same inputs as the ``global.conf`` file.
- Its contents compose and overwrite the existing values in ``global.conf`` with higher precedence.
- It is designed for developers to be able to customize and deviate from the organization/team common ``global.conf``.
- This file is not intended to be managed or installed by ``conan config install/install-pkg`` commands.
- The existence of this file allows developers to sync and update their organization ``global.conf`` with ``conan config install/install-pkg`` without losing their customization
- A ``conan config clean`` will remove the ``global_user.conf`` file, as its purpose is to completely reset the Conan home configuration.


Configuration precedence
========================

There are different places where a configuration such as ``tools.build:verbosity`` can be defined:

- Globally, in the ``global.conf`` file
- In a ``tool_requires`` recipe that defines a ``self.conf_info`` in their ``package_info()`` method.
  (Recall that only **direct** ``tool_requires`` propagate ``conf_info`` to their consumers).
- In a profile file ``[conf]`` section
- In the command line ``-c tools.build:verbosity=<value>``

In general, the rule is that the "closest to the user" has higher precedence. 

That means that:

- The command line arguments like ``-c tools.build:verbosity=<value>`` will have higher precedence and overwrite
  possible values already defined in ``tool_requires``, in ``global.conf`` or profiles ``[conf]`` section. The idea is that the user
  explicitly requested that typing it in the command line, so they want that value to prevail.
- Then, the profile ``[conf]`` section will have precedence over the ``tool_requires`` and ``global.conf`` definitions, as the profiles
  are also inputs by the user.
- Then, the ``global.conf`` will have precedence over ``tool_requires`` defined ``conf_info``. The idea is that the user can define the
  behavior they want without having to modify or rewrite recipes.
- Finally, the one with less precedence is the ``tool_requires`` configuration defined in ``package_info()`` method with ``self.conf_info``.

The core configurations such as ``core:skip_warnings`` can be defined in:

- Globally, in the ``global.conf``, with less precedence
- In the command line, with ``-cc/--core-conf core:skip_warnings=<value>`` with higher precedence over the ``global.conf``.

Note that ``core`` configurations cannot be defined in profiles or in recipes.


Important configurations with ``!`` specifier
---------------------------------------------

There are some scenarios when it is desired that a recipe defined configuration in ``package_info()`` via the ``conf_info``
has higher precedence over a value defined downstream by the user in profiles or command line.

The "important configuration" definition allows this, specifying with the ``!`` qualifier over the configuration name that
such value should have relatively higher priority.
Imagine we are writing a ``tool_requires`` for the Msys2 subsystem, and we would like that recipe to define the ``tools.microsoft.bash:path``
value so it points to itself.
But for some reason we also have ``tools.microsoft.bash:path`` in our profiles, pointing to a Msys2 that still some
packages that do not use the new ``msys2/1.0`` still need. We could define a recipe like:

.. code-block:: python

    from conan import ConanFile

    class Pkg(ConanFile):
        name = "msys2"
        version = "1.0"

        def package_info(self):
          bash = os.path.join(self.package_folder, "bash.exe")
          # Note the ! after the name of the configuration
          # That makes this definition "important", and have higher 
          # precedence than in profiles
          self.conf_info.define("tools.microsoft.bash:path!", bash)
          # You can apply the same ! specifier in other "conf_info"
          # operations, for paths, append/prepend, etc

with some consumers that requires it:

.. code-block:: python

    from conan import ConanFile

    class Pkg(ConanFile):
        name = "mylib"
        version = "1.0"

        def build_requirements(self):
          if self.settings_build.os == "Windows":
            self.tool_requires("msys2/1.0")

And then have a profile like

.. code-block:: ini

  [conf]
  tools.microsoft.bash:path=<point/to/system/msys2/installation>

Then, the ``mylib/1.0`` will get the ``tools.microsoft.bash:path`` pointing to the ``msys2`` path,
while other recipes that do not ``tool_requires`` the ``msys2`` will still get the system one.

If for some reason a profile or command line would still want to force an override also the
important configurations from packages upstream, they can do it using the same syntax:

.. code-block:: ini

  [conf]
  # This will force all packages to use the system msys2, even if they
  # are tool-requiring the ``msys2/1.0`` package
  # Note the ! after the configuration name
  tools.microsoft.bash:path!=<point/to/system/msys2/installation>


.. important::

  **Best practices**

  The usage of important ``!`` configuration should be exceptional, and reduced to limited cases when
  there are no other alternatives. Modifying the default precedence, in which users expects their inputs
  from command line or profiles to be always applied can be confusing for them. Please use this feature 
  sparingly and being aware of these implications.


Information about built-in confs
================================

This section provides extra information about specific confs.


Policies
--------

The ``core:policies`` conf allows to define policies that will be applied globally to modify the
behaviour of Conan in certain aspects. Check :ref:`the policies section <reference_policies>`
for more information.

Networking confs
----------------

.. _reference_config_files_global_conf_ssl_certificates:

Configuration of client certificates
++++++++++++++++++++++++++++++++++++

Conan supports client TLS certificates. You can configure the path to your existing *Cacert* file and/or your client
certificate (and the key) using the following configuration variables:

* ``core.net.http:cacert_path``: Path containing a custom Cacert file.
  When multiple certificates are necessary for different remotes, it is possible to aggregate them, for example adding
  your own ``my-ca.crt`` certificate:

  .. code-block:: text

    sudo cp my-ca.crt /usr/local/share/ca-certificates/my-ca.crt
    sudo update-ca-certificates


  Then, the certificate storage can be defined with ``core.net.http:cacert_path=/etc/ssl/certs/ca-certificates.crt``.
  The ``cacert_path`` Conan configuration is forwarded to the ``python-requests`` ``verify`` argument, see
  `Python-requests SSL certificates <https://requests.readthedocs.io/en/latest/user/advanced/#ssl-cert-verification>`_.
  That means that if the ``REQUESTS_CA_BUNDLE`` environment variable is defined, it might be taken into account too.
  
* ``core.net.http:client_cert``: Path or tuple of files containing a client certificate (and the key). See more details in
  `Python requests and Client Side Certificates <https://requests.readthedocs.io/en/latest/user/advanced/#client-side-certificates>`_

  For instance:

  .. code-block:: text
      :caption: **[CONAN_HOME]/global.conf**

      core.net.http:client_cert=('/path/client.cert', '/path/client.key')

* ``tools.files.download:verify``: Setting ``tools.files.download:verify=False`` constitutes a security risk if enabled,
  as it disables certificate validation. Do not use it unless you understand the implications
  (And even then, properly scoping the conf to only the required recipes is a good idea)
  or if you are using it for development purposes

.. seealso::

    If you need to use both a corporate remote (with a private CA) and a public remote like
    ConanCenter, see :ref:`faq_ssl_corporate_certificates` for step-by-step instructions on
    creating a combined CA bundle.


Proxies
+++++++

There are 3 ``confs`` that can define proxies information:

.. code-block:: bash

  $ conan config list proxies
  core.net.http:clean_system_proxy: If defined, the proxies system env-vars will be discarded
  core.net.http:no_proxy_match: List of urls to skip from proxies configuration
  core.net.http:proxies: Dictionary containing the proxy configuration

The ``core.net.http:proxies`` dictionary is passed to the underlying ``python-requests`` library, to the "proxies" argument
as described in the `python-requests documentation <https://requests.readthedocs.io/en/latest/user/advanced/#proxies>`_

The ``core.net:no_proxy_match`` is a list of URL patterns, like:

.. code-block:: ini

  core.net.http:no_proxy_match = ["http://someurl.com/*"]


for URLs to be excluded from the ``proxies`` configuration. That means that all URLs that are referenced that matches any
of those patterns will not receive the ``proxies`` definition. Note the ``*`` in the pattern is necessary for the match.

If ``core.net.http:clean_system_proxy`` is ``True``, then the environment variables ``"http_proxy", "https_proxy", "ftp_proxy", "all_proxy", "no_proxy"``,
will be temporary removed from the environment, so they are not taken into account when resolving proxies.


MSYS2 subsystem environments
-----------------------------

The ``tools.microsoft.bash:subsystem`` configuration accepts ``msys2`` as a generic value, but also
supports explicit MSYS2 environment names using the ``msys2-<environment>`` syntax. This allows
selecting a specific MSYS2 environment (and its associated ``MSYSTEM`` variable) rather than relying
on the architecture-based default.

This specific ``MSYSTEM`` variable can become important for recipes using autotools in Windows with ``win_bash=True``, 
and compiling with different ``msys2`` compilers. For other build systems such as CMake, explicitly defining
the path to the compiler used could be enough.

Supported values:

- ``msys2`` (default): uses architecture-based MSYSTEM (``MINGW64`` for x86_64, ``MINGW32`` for x86).
- ``msys2-ucrt64``: selects the UCRT64 environment (``UCRT64``).
- ``msys2-clang64``: selects the CLANG64 environment (``CLANG64``).
- ``msys2-clangarm64``: selects the CLANGARM64 environment.
- ``msys2-mingw64``: selects the MINGW64 environment explicitly.
- ``msys2-mingw32``: selects the MINGW32 environment explicitly.
- ``msys2-clang32``: selects the CLANG32 environment.

Example profile:

.. code-block:: text
    :caption: *windows_ucrt64*

    [settings]
    os=Windows
    arch=x86_64
    ...

    [conf]
    tools.microsoft.bash:subsystem=msys2-ucrt64
    tools.microsoft.bash:path=C:\msys64\usr\bin\bash.exe

The ``msys2-<environment>`` format sets the ``MSYSTEM`` environment variable accordingly when running
bash commands, enabling proper activation of the selected MSYS2 toolchain.

Recall that the ``tools.microsoft.bash:subsystem`` conf doesn't have any effect on the ``package_id``
computation. If users want to model binaries for the different environments, it is necessary to define
accordingly the ``os.subsystem`` setting. At the moment it only accepts ``msys2`` value, so users wanting
more control can extend it via the custom ``settings_user.yml`` file.


Storage configurations
----------------------

core.cache:storage_path
+++++++++++++++++++++++

Absolute path to a folder where the Conan packages and the database of the packages will be stored.
This folder will be the heaviest Conan storage folder, as it stores the binary packages downloaded or created.

.. code-block:: text
    :caption: *global.conf*

    core.cache:storage_path = C:\Users\danielm\my_conan_storage_folder

**Default value:** ``<CONAN_HOME>/p``

core.download:download_cache
++++++++++++++++++++++++++++

Absolute path to a folder where the Conan packages will be stored *compressed*.
This is useful to avoid recurrent downloads of the same packages, especially in CI.

.. code-block:: text
    :caption: *global.conf*

    core.download:download_cache = C:\Users\danielm\my_download_cache

**Default value:** Not defined.

.. note::

   When this conf is defined and an artifact is uploaded to a remote,
   Conan will also populate the download cache of the client with the same artifact.


UX confs
--------

.. _reference_config_files_global_conf_skip_warnings:

Skip warnings
+++++++++++++

There are several warnings that Conan outputs in certain cases which can be omitted via the ``core:skip_warnings`` conf,
by adding the warning tag to its value.

Those warnings are:

  - ``deprecated``: Messages for deprecated features such as legacy generators
  - ``network``: Messages related to network issues, such as retries


Parallel download
+++++++++++++++++

By default the download and unzip of pre-compiled package binaries from remote servers will happen in parallel,
defaulting to the number of cpu-cores. The configuration ``core.download:parallel=<int-number>`` can change this
behavior. If ``core.download:parallel=0``, then the behavior will be to not use parallelism and do a sequential
download and unzip of precompiled package binaries.
This ``core.download:parallel`` configuration also affects the ``conan download`` command, but for that command
the default at the moment is not to use parallelism, but sequential download.


Environment deactivation functions
++++++++++++++++++++++++++++++++++

.. include:: ../../common/experimental_warning.inc


When setting the configuration ``tools.env:deactivation_mode`` to ``function`` in your profile or in
``global.conf``, the deactivation scripts will no longer be generated.

Instead, an *in-memory* deactivation function will be available in the
current shell session as soon as you activate the conan environment.

Moving from the classical Conan workflow:

.. tabs::

    .. code-tab:: bash

        $ source conanbuild.sh
        $ ...
        $ source deactivate_conanbuild.sh

    .. code-tab:: powershell

        $ .\conanbuild.ps1
        $ ...
        $ .\deactivate_conanbuild.ps1

    .. code-tab:: batch

        $ .\conanbuild.bat
        $ ...
        $ .\deactivate_conanbuild.bat

To the new workflow,

.. tabs::

    .. code-tab:: bash

        $ source conanbuild.sh
        $ ...
        $ deactivate_conanbuild # from anywhere in the shell

    .. code-tab:: powershell

        $ .\conanbuild.ps1
        $ ...
        $ deactivate_conanbuild # from anywhere in the shell

    .. code-tab:: batch

        $ .\conanbuild.bat
        $ ...
        $ deactivate_conanbuild # from anywhere in the shell

By executing this function, the environment will be restored and the function will no longer be
available in the current shell session. This behavior emulates the well known ``virtualenv`` Python tool.

.. code-block:: text
    :caption: *global.conf*

    tools.env:deactivation_mode=function

**Default value:** None.
